Fix BUG: main background color cutting on smaller resolutions

--- a/styles/style.css
+++ b/styles/style.css
@@ -104,7 +104,7 @@ button {
 }
 
 main {
-  height: 100%;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
